--- a/index.html
+++ b/index.html
@@ -1,11 +1,113 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hans">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>UICN用户体验设计平台</title>
+  <meta name="keywords"
+    content="ui 设计,ui 外包,ui 培训,ui 招聘,ui 学习,ui 源文件,ue 设 计,ux 设计,用户体验设计,界面设计,交互设计,动效设计,APP 界面设计,主题 设计, ui 教程, ui 工具,ui 灵感,设计师简历">
+  <meta name="description" content="UI中国用户体验平台,中国用户体验联盟理事单位。国内极具影响力的设计平台之一。十多年来,携手会员150万+,共同致力于为设计师与企业搭建健康的设计生态！">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./font_4333481_6derf3qj63f/iconfont.css">
 </head>
+
 <body>
-  
+  <!-- 首部 -->
+  <header class="page-header">
+    <div class="header-container container-1480">
+      <div class="header-left">
+        <a href="javascript:;" class="header-logo">
+          <img src="./img/yearlogo.png" alt="" class="header-logo__img">
+        </a>
+        <div class="header-navlist">
+          <div class="header-nav-item">
+            <span class="header-nav-item__text">首页</span>
+          </div>
+          <div class="header-nav-item">
+            <span class="header-nav-item__text">发现&nbsp;</span>
+            <span class="iconfont icon-xxx"></span>
+          </div>
+          <div class="header-nav-item">
+            <span class="header-nav-item__text">学习&nbsp;</span>
+            <span class="iconfont icon-xxx"></span>
+          </div>
+          <div class="header-nav-item">
+            <span class="header-nav-item__text">招聘</span>
+          </div>
+          <div class="header-nav-item">
+            <span class="header-nav-item__text">浏览器</span>
+          </div>
+          <div class="header-nav-item">
+            <span class="header-nav-item__text">素材</span>
+          </div>
+          <div class="header-nav-item">
+            <span class="header-nav-item__text">榜单</span>
+          </div>
+          <div class="header-nav-item">
+            <span class="header-nav-item__text">会员</span>
+          </div>
+          <div class="header-nav-item">
+            <span class="iconfont icon-shenglvehao"></span>
+          </div>
+        </div>
+      </div>
+      <div class="header-right">
+        <div class="header-search">
+          <span class="iconfont icon-search"></span>
+        </div>
+        <div class="header-upload">
+          <span class="iconfont icon-shangchuan"></span>
+        </div>
+        <div class="header-login">
+          <span class="iconfont icon-xxx"></span>
+          <span class="header-login__text">登录</span>
+
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <!-- 主体 -->
+  <div class="page-body">
+    <div class="banner-section">
+      <div class="banner-list">
+        <div class="banner-item">
+          <img src="./img/banner-1.png" alt="" class="banner-item__img">
+        </div>
+      </div>
+    </div>
+    <div class="recommend-section">
+      <div class="recommend-topic">
+        <div class="recommend-title-list">
+
+        </div>
+        .recommend-title-
+      </div>
+
+    </div>
+    <div class="hot-section"></div>
+    <div class="combine-section article-career">
+      <div class="combine-container">
+        <div class="article-section"></div>
+        <div class="article-section"></div>
+      </div>
+    </div>
+
+    <div class="combine-section top-team">
+      <div class="combine-container">
+        <div class="rank-top"></div>
+        <div class="rank-team"></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 底部 -->
+  <footer class="page-footer">
+    <div class="footer-left"></div>
+    <div class="footer-right"></div>
+  </footer>
 </body>
+
 </html>
